syntax = "proto3";

package users;


message GetUserRequest {
  string email = 1;
}

message GetUserResponse {
  string name = 1;
  string email = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  string name = 1;
  string email = 2;
}

service UsersService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}